# fractus

./: .gitignore  Cargo.toml  MODEL_CARD.md  README.md  fractus_continuous.onnx  pyproject.toml  requirements-dev.txt  requirements.txt
crate/fractus-core/: Cargo.toml
crate/fractus-core/src/: lib.rs  vortex.rs
crate/fractus-py/: Cargo.toml
crate/fractus-py/src/: lib.rs
data/: __init__.py  fractus_memory.pkl
data/causal/: __init__.py  generate_scm.py  generate_scm_hard.py
data/text/: tinyshakespeare.py
docs/: 2026-06-19-fractus-L0-socle.md  2026-06-19-fractus-L1-embedding.md  2026-06-19-fractus-L2a-attention.md  2026-06-19-fractus-L2b-kuramoto-moe.md  2026-06-19-fractus-L3-siren.md  2026-06-19-fractus-L4-causal.md  2026-06-26-fractus-L8-lightweight-training.md  2026-06-26-fractus-L9-continuous-thought-engine.md  2026-06-26-fractus-L9-fractus-1b-design.md  EDT.md  Fractus_EDT_Paper.md  Fractus_Metrics.md  OVERVIEW.md  PLAN_NEXT_RUN.md  SPEC.md
fractus/: __init__.py  cognitive_modes.py  continuous_engine.py  generative_planner.py  memory.py  model_1b.py  rag.py  specialization.py  tokenizer.py
fractus/causal/: __init__.py  do.py  notears.py  rkhs.py
fractus/math/: __init__.py  fibonacci.py  primes.py  stats.py
fractus/metrics/: __init__.py  causal.py  compression.py  perplexity.py
fractus/nn/: __init__.py  attention.py  block.py  char_features.py  embedding.py  farey.py  fourier.py  moe.py  phase_ode.py  siren.py  siren_linear.py  stats.py  triton_kernels.py
fractus/reasoning/: __init__.py  act.py  conjecture.py  prime_generator.py  proof.py  proof_trainer.py  self_consistency.py
fractus/stability/: __init__.py  lyapunov.py
fractus/train/: __init__.py  online.py
fractus1B/: __init__.py  model_1b.py  pgsu.py  progressive_depth.py  train_1b.py
fractus1B/nn/: __init__.py  block.py  cached_siren.py  char_features.py  embedding.py  fourier.py  lazy_siren.py  moe.py  structured_siren.py  triton_kernels.py
fractus1B/train/: forward_forward.py  surprise_gate.py  trainer.py  true_ff.py
scripts/: assemble_fractus.py  bench_train.py  build_chinchilla_corpus.py  build_chinchilla_corpus_v2.py  build_communication_corpus.py  build_dataset.py  build_fractus_1b_corpus.py  build_fractus_corpus.py  build_large_dataset.py  build_mega_corpus.py  build_quality_dataset.py  build_ultimate_corpus.py  continue_1b.py  demo_causal.py  demo_causal_hard.py  demo_embedding.py  demo_full.py  demo_prime_reinforce.py  demo_proof_curriculum.py  demo_proof_reinforce.py  demo_shakespeare.py  demo_siren_compression.py  demo_transformer.py  edt_pipeline_final.py  generate_whitepaper.py  train_13m_rag.py  train_1b_cloud.py  train_1b_fast.py  train_1b_final.py  train_1b_quality.py  train_1b_real.py  train_continuous.py  train_fixed.py  train_fractus_1b.py  train_fractus_large.py  train_hf.py  transfer_to_cte.py
space/: Dockerfile  README.md  app.py  requirements.txt
space/static/: index.html
tests/: __init__.py  test_act.py  test_attention.py  test_attention_vectorized.py  test_block.py  test_causal_hard.py  test_causal_metrics.py  test_compression.py  test_conjecture.py  test_do.py  test_embedding.py  test_farey.py  test_moe.py  test_notears.py  test_perplexity.py  test_phase_ode.py  test_prime_generator.py  test_proof.py  test_proof_trainer.py  test_rkhs.py  test_siren.py  test_siren_linear.py  test_smoke.py  test_stability.py  test_state_carry.py  test_stats.py  test_structured_siren.py  test_surprise_gate.py  test_vortex_bridge.py
