[package]
name = "fractus-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
fractus-core = { path = "../fractus-core" }
# pyo3 0.22 not supported that Python ≤3.13 ; the venv target est 3.14 → on monte a 0.29.
pyo3 = { version = "0.29", features = ["extension-module"] }
